# lambda-gha

./: .gitignore  CLAUDE.md  Dockerfile  README.md  action.yml  pyproject.toml
.github/workflows/: README.md  ci.yaml  demo-cpu-sweep.yml  demo-dbg-minimal.yml  demo-gpu-minimal.yml  demo-gpu-sweep.yml  demo-instances-mtx.yml  demo-jobs-split.yml  demo-runners-mtx.yml  demos.yml  e2e-test.yml  runner.yml  test-disk-full.yml  test-runner.yml
scripts/: instance-runtime.py  update-lmbda-ssh  update-snapshots.sh
src/ec2_gha/: __main__.py  defaults.py  log_constants.py  start.py
src/ec2_gha/scripts/: check-runner-termination.sh  job-completed-hook.sh  runner-setup.sh
src/ec2_gha/templates/: shared-functions.sh  user-script.sh.templ
src/lambda_gha/: __main__.py  annotations.py  cli.py  defaults.py  errors.py  start.py
src/lambda_gha/scripts/: __init__.py  check-runner-termination.sh  job-started-hook.sh  runner-setup.sh
src/lambda_gha/templates/: __init__.py  shared-functions.sh
tests/: test_main.py  test_start.py
tests/__snapshots__/: test_start.ambr
