[project]
name = "ec2_gha"
version = "1.0.0"
description = "Start an AWS GitHub Actions Runner"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Ethan Holz", email = "ethan.holz@omsf.io" }]
dependencies = ["boto3", "gha_runner @ git+https://github.com/Open-Athena/gha-runner.git@v1"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "moto[ec2]", "responses", "ruff", "syrupy"]

[build-system]
# We are not going to add versioningit at this time
requires = ["setuptools >= 61.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ec2_gha = ["*.templ", "templates/*.templ", "templates/*.sh"]

[tool.pytest.ini_options]
markers = ["slow: marks test as slow"]

[tool.ruff]
line-length = 999

[tool.ruff.lint]
select = ["F", "E", "N"]
ignore = ["E501"]
