[project]
name = "lambda_gha"
version = "0.1.0"
description = "Start a Lambda Labs GPU GitHub Actions Runner"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["click", "requests", "gha_runner @ git+https://github.com/Open-Athena/gha-runner.git@v1"]

[project.scripts]
lmbda = "lambda_gha.cli:cli"

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "responses", "ruff", "syrupy"]

[build-system]
# We are not going to add versioningit at this time
requires = ["setuptools >= 61.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lambda_gha = ["templates/*.sh", "scripts/*.sh"]

[tool.pytest.ini_options]
markers = ["slow: marks test as slow"]

[tool.ruff]
line-length = 999

[tool.ruff.lint]
select = ["F", "E", "N"]
ignore = ["E501"]
